Updated tags image controller and docs
