# docs/swagger.json
@@ -46,7 +46,7 @@
                     "multipart/form-data"
                 ],
                 "tags": [
-                    "image"
+                    "Image"
                 ],
                 "summary": "Upload an image to MinIO",
                 "parameters": [
@@ -84,7 +84,7 @@
             "get": {
                 "description": "Get an image from MinIO bucket \"imagens\"",
                 "tags": [
-                    "image"
+                    "Image"
                 ],
                 "summary": "Get an image from MinIO",
                 "parameters": [
@@ -117,6 +117,17 @@
         },
         "/nested/authors": {
             "get": {
+                "description": "Find all authors",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nested"
+                ],
+                "summary": "Find all authors",
                 "responses": {}
             }
         },
